<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <!--  Location label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/location_tag"
            android:textColor="@color/foreGreen" />

        <!-- Location field -->
        <EditText
            android:id="@+id/location_value_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background" />

        <!--  OR  -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:paddingTop="50dp"
            android:text="OR"
            android:textSize="25dp"
            android:textColor="@color/foreGreen" />


        <!--  Person label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingTop="10dp"
            android:text="@string/person_tag"
            android:textColor="@color/foreGreen" />

        <!-- Person field -->
        <EditText
            android:id="@+id/person_value_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background" />

        <!--  Buttons for confrim and cancel -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/confirm_tags"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/foreGreen"
                android:onClick="confirmTagInput"
                android:text="@string/confirm_label_button"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/cancel_tags"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/foreGreen"
                android:onClick="cancelTagInput"
                android:text="@string/cancel_label_button"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>